# CruxPlayground

./: .gitignore  Cargo.toml  build.sh  rust-toolchain.toml
application/: Cargo.toml  build.rs  uniffi.toml
application/src/: application.rs  lib.rs
component/: Cargo.toml  build.rs  uniffi.toml
component/src/: component.rs  lib.rs
uniffi-bindgen/: Cargo.toml
