[package]
name = "component"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "component"

[[bin]]
name = "codegen"
required-features = ["cli", "facet_typegen"]

[features]
facet_typegen = ["crux_core/facet_typegen"]
cli = ["crux_core/cli"]

[dependencies]
crux_core.workspace = true
serde = { workspace = true, features = ["derive"] }
uniffi.workspace = true
facet.workspace = true
wasm-bindgen.workspace = true
anyhow.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
